добавлены измения( по БЭМ)

--- a/2nd part/index.html
+++ b/2nd part/index.html
@@ -15,35 +15,35 @@
 <body>
     <div class="wrapper">
         <header>
-            <div class="header_line">
-                <div class="header_logo">
-                    <div class="logo"> <img src="assets/images/logosign.svg" alt="logo"></div>
-                    <div class="header_logo_name">Виарушка</div>
+            <div class="header-line">
+                <div class="header-line__logo">
+                    <div class="header-line__logo_logo-icon"> <img src="assets/images/logosign.svg" alt="logo"></div>
+                    <div class="header-line__logo_logo-name">Виарушка</div>
                 </div>
-                <div class="button_cart">
-                    <div class="button_cart_text">Корзина</div> 
-                    <img id="cart_icon" src="assets/images/cart.svg" alt="cart">    
+                <div class="button-cart">
+                    <div class="button-cart__text">Корзина</div> 
+                    <img id="cart-icon" src="assets/images/cart.svg" alt="cart">    
                 </div>
             </div>
 
-            <div class="header_inner">
-                <div class="header_inner_left_part">
-                        <div class="left_part_title">Виртуальная<br/> реальность<br/> без проводов</div>
-                        <div class="left_part_text">Лучшее, что случалось с виртуальным миром<br/> в реальности. Новый компактный шлем <br/>без проводов и дорогих комьютеров.</div>
-                        <div class="left_part_button">
-                            <div class="left_part_button_text">Купить</div>  
+            <div class="header-inner">
+                <div class="header-inner__left-part">
+                        <div class="inner__left-part_title">Виртуальная<br/> реальность<br/> без проводов</div>
+                        <div class="inner__left-part_text">Лучшее, что случалось с виртуальным миром<br/> в реальности. Новый компактный шлем <br/>без проводов и дорогих комьютеров.</div>
+                        <div class="inner__left-part_button">
+                            <div class="left-part__button_text">Купить</div>  
                             <img id="creditcard" src="assets/images/card.svg" alt="card"></div>
 
                         <nav class="nav">
-                            <a class="nav_item" href="#">Возможности</a>
-                            <a class="nav_item" href="#">Где купить</a>
-                            <a class="nav_item" href="#">Доставка</a>
-                            <a class="nav_item" href="#">Помощь</a>
+                            <a class="nav__item" href="#">Возможности</a>
+                            <a class="nav__item" href="#">Где купить</a>
+                            <a class="nav__item" href="#">Доставка</a>
+                            <a class="nav__item" href="#">Помощь</a>
                         </nav>
                 </div>
 
-                <div class="header_inner_right_part">
-                        <img class="right_part_picture" src="assets/images/boy.svg" alt="boy">
+                <div class="header-inner__right-part">
+                        <img class="inner__right-part_picture" src="assets/images/boy.svg" alt="boy">
                 </div>  
             </div>
         </header>
