--- a/2nd part/index2.html
+++ b/2nd part/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="assets/styles/styles2.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="normalize — копия 2.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -15,14 +15,14 @@
 <body>
     <div class="wrapper">
     <header>
-        <div class="header_line">
-            <div class="header_logo">
-                <div class="logo"> <img src="assets/images/logosign.svg" alt="logo"></div>
-                <div class="header_logo_name">Виарушка</div>
+        <div class="header-line">
+            <div class="header-line__logo">
+                <div class="header-line__logo_logo-icon"> <img src="assets/images/logosign.svg" alt="logo"></div>
+                <div class="header-line__logo_logo-name">Виарушка</div>
             </div>
-            <div class="button_cart">
-                <div class="button_cart_text">Корзина</div> 
-                <img src="assets/images/cart.svg" alt="cart">    
+            <div class="button-cart">
+                <div class="button-cart__text">Корзина</div> 
+                <img id="cart-icon" src="assets/images/cart.svg" alt="cart">    
             </div>
         </div>
     </header>    
@@ -31,7 +31,7 @@
 
 <div class="wrapper">
     <main>
-        <div class="main_title">Возможности</div>
+        <div class="main-title">Возможности</div>
         
         <div class="row">
             <div class="col-sm-4">
@@ -99,10 +99,10 @@
 
 <div class="wrapper">    
     <nav class="nav">
-        <a class="nav_item" href="#">Возможности</a>
-        <a class="nav_item" href="#">Где купить</a>
-        <a class="nav_item" href="#">Доставка</a>
-        <a class="nav_item" href="#">Помощь</a>
+        <a class="nav__item" href="#">Возможности</a>
+        <a class="nav__item" href="#">Где купить</a>
+        <a class="nav__item" href="#">Доставка</a>
+        <a class="nav__item" href="#">Помощь</a>
     </nav>  
 </div>
     
